--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.rotate-180 {
+  transform: rotate(180deg);
+  transition: transform 0.5s ease;
+}
+
+.rotate-back {
+  transform: rotate(0deg);
+  transition: transform 0.5s ease;
+}
